--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API REST para una hamburgueseria",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx babel-node src/index.js",
+    "dev": "nodemon --exec npx babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/Enzo0026/backend-crudBurgers-65i/issues"
   },
-  "homepage": "https://github.com/Enzo0026/backend-crudBurgers-65i#readme"
+  "homepage": "https://github.com/Enzo0026/backend-crudBurgers-65i#readme",
+  "dependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/node": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "mongoose": "^8.9.5",
+    "morgan": "^1.10.0"
+  }
 }
